--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Workflow</title>
+    <title>FirJS Demo</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <link rel="stylesheet" href="./workflow-tree.css">
+    <link rel="stylesheet" href="./css/workflow-tree.css">
     <link rel="stylesheet" href="./page.css">
 </head>
 
@@ -16,7 +17,8 @@
     <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap shadow">
         <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6">FirJs Demo</a>
         <div class="mx-3">
-            <button type="button" class="btn btn-primary" id="centerWorkflow">Center</button>
+            <button type="button" class="btn btn-primary" id="changeFlowMode">Change flow mode</button>
+            <button type="button" class="btn btn-secondary" id="centerWorkflow">Center</button>
             <a type="button" class="btn btn-dark ms-1" href="https://github.com/sedax90/FirJs/blob/main/README.md"
                 target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github"
@@ -41,14 +43,8 @@
                             <li class="nav-item mb-2">
                                 <a draggable="true" data-type="task"
                                     class="draggable list-group-item list-group-item-action d-flex align-items-center gap-3 py-3 px-2 bg-white border rounded">
-                                    <span class="text-primary">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"
-                                            fill="currentColor" class="bi bi-gear-wide" viewBox="0 0 16 16">
-                                            <path
-                                                d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492zM5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0z" />
-                                            <path
-                                                d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52l-.094-.319zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115l.094-.319z" />
-                                        </svg>
+                                    <span class="text-primary" style="font-size: 2em;">
+                                        <i class="bi bi-gear"></i>
                                     </span>
                                     <div class="d-flex gap-2 w-100 justify-content-between">
                                         <div>
@@ -97,18 +93,41 @@
                                     </div>
                                 </a>
                             </li>
+                            <li class="nav-item mb-2">
+                                <a draggable="true" data-type="terminator"
+                                    class="draggable list-group-item list-group-item-action d-flex align-items-center gap-3 py-3 px-2 bg-white border rounded">
+                                    <span class="text-primary">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"
+                                            fill="currentColor" class="bi bi-stop-circle" viewBox="0 0 16 16">
+                                            <path
+                                                d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+                                            <path
+                                                d="M5 6.5A1.5 1.5 0 0 1 6.5 5h3A1.5 1.5 0 0 1 11 6.5v3A1.5 1.5 0 0 1 9.5 11h-3A1.5 1.5 0 0 1 5 9.5v-3z" />
+                                        </svg>
+                                    </span>
+                                    <div class="d-flex gap-2 w-100 justify-content-between">
+                                        <div>
+                                            <h6 class="mb-0">Terminator</h6>
+                                            <p class="mb-0 opacity-75">End</p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
 
                 <div class="d-grid gap-2 p-3 mt-auto">
+                    <button id="redrawBtn" class="btn btn-secondary" type="button">
+                        <i class="bi bi-arrow-clockwise"></i> Refresh
+                    </button>
                     <button id="resetBtn" class="btn btn-primary" type="button">
                         Reset (preserve current position and scale)
                     </button>
                 </div>
             </nav>
 
-            <main class="col overflow-hidden">
+            <main id="main-col" class="col overflow-hidden">
                 <div id="root" class="root"></div>
             </main>
         </div>
@@ -118,7 +137,7 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <script src="./firjs.js"></script>
+    <script src="./index.js"></script>
     <script src="./scripts.js"></script>
 </body>
 
